--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,16 +89,17 @@ body {
 
 .stylish-button1 {
   position: relative;
-  display: block;
-  width: 80%;
+  display: inline-block;
+  width: 48%;
   padding: 0.75rem 1.5rem;
   font-size: 1rem;
   font-weight: 600;
-  color: #000; /* Set initial font color to black */
+  color: #000; 
   background-color: white;
   border: 2px solid #2C3E50;
   cursor: pointer;
   overflow: hidden;
+  margin-right: 2%;
   transition: color 0.6s ease-in-out, background-color 0.6s ease-in-out;
   z-index: 0;
 }
@@ -124,7 +125,7 @@ body {
 }
 
 .stylish-button1:hover {
-  color: white; /* Change font color to white on hover */
+  color: white; 
 }
 
 .stylish-button1 span {
