--- a/frontend/src/styles/LoginRegister.css
+++ b/frontend/src/styles/LoginRegister.css
@@ -1,12 +1,3 @@
-/*
-**************************************************************
-  @author : Zumry Amanullah
-  @portfolio : https://www.zumry.ml
-************************************************************
-*/
-
-/* ---------- icon css -------- */
-
 .Login-Section .fas {
     padding: 15px;
     opacity: 0.7;
@@ -19,10 +10,6 @@
     cursor: pointer;
     opacity: 0.9;
 }
-
-/*.Login-Section .p-link {*/
-/*    padding-top: 5px;*/
-/*}*/
 
 /* ---------- Section css -------- */
 
@@ -183,9 +170,7 @@
     top: -10%;
     right: 48%;
     transform: translateY(-50%);
-    /*background-image: linear-gradient(358deg, #d15a08 0%, #007aff 100%);*/
     background-image: linear-gradient(12deg, #9f5522 0%, #0043ff 100%);
-    /*background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);*/
     transition: 1.8s ease-in-out;
     border-radius: 50%;
     z-index: 6;
@@ -422,16 +407,16 @@
 /* drop down css */
 .input-field select {
     border: 1px solid #ccc;
-    border-radius: 0.375rem; /* Tailwind's rounded-md */
+    border-radius: 0.375rem;
     padding: 0.5rem;
     transition: border-color 0.2s ease;
 }
 
 .input-field select:hover {
-    border-color: #007bff; /* Change to your preferred hover color */
+    border-color: #007bff;
 }
 
 .input-field select:focus {
     outline: none;
-    border-color: #007bff; /* Change to your preferred focus color */
+    border-color: #007bff;
 }
